--- a/css/main.css
+++ b/css/main.css
@@ -152,8 +152,11 @@ textarea {
     resize: none;
     width: 100%;
     height: 200px;
+    padding: 5px 15px;
     background-color: #f3f3f3;
+    box-sizing: border-box;
     border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
 }
 
 input[type="submit"] {
