--- a/css/map.css
+++ b/css/map.css
@@ -14,7 +14,7 @@
     background-color: var(--green);
     color: white;
     border-radius: 10px;
-    position: absolute;
+    position: fixed;
     top: -20px;
     z-index: 100;
     width: 100%;
@@ -37,5 +37,9 @@
 iframe {
     width: 100%;
     height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
