--- a/css/map.css
+++ b/css/map.css
@@ -27,11 +27,16 @@
  .map-categories {
     position: fixed;
     bottom: 100px;
+    width: 100%;
 }
 
 .map-categories img {
     width: 100px;
     height: 100px;
+}
+
+.map-categories div *{
+    margin: 0 20px;
 }
 
 iframe {
