--- a/css/map.css
+++ b/css/map.css
@@ -39,12 +39,8 @@
     margin: 0 20px;
 }
 
-#map iframe {
+#mapbox {
     width: 100%;
     height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
 }
 
