slide down animation on searchbar

--- a/css/main.css
+++ b/css/main.css
@@ -187,13 +187,14 @@ input[type="submit"] {
     border-radius: 12px;
     border: 1px solid white;
     text-indent: 16px;
+    z-index: 3;
+    position: relative;
 }
 
 .searchbar_container input::placeholder {
     font-size: 20px;
     color: #AAAAAA;
     font-family: 'Poppins Regular', sans-serif;
-
 }
 
 /* Green thing at top of homepage */
@@ -207,6 +208,7 @@ input[type="submit"] {
     background-color: var(--green);
     position: absolute;
     z-index: -1;
+    max-height: 1144px;
 }
 
 /* Popular items */
