--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,8 @@ h6 {
     font-size: 25px;
 }
 
-.nav ul>li a, i {
+.nav ul>li a,
+i {
     color: #fff;
 }
 
@@ -98,7 +99,7 @@ h6 {
     text-align: center;
 }
 
-.nav-more>ol>li img{
+.nav-more>ol>li img {
     width: 100px;
 }
 
@@ -133,7 +134,7 @@ h6 {
     border-radius: 0 0 15px 15px;
 }
 
-.green-head>h2{
+.green-head>h2 {
     margin-left: 15px;
     line-height: 1;
 }
@@ -164,6 +165,7 @@ input[type="email"] {
     box-sizing: border-box;
     border-radius: 5px;
 }
+
 /*
 input[type="file"]{
     width: 40%;
@@ -174,7 +176,7 @@ input[type="file"]{
     border-radius: 5px;
 }*/
 
-.fileInput{
+.fileInput {
     margin-top: 20px;
     height: 40px;
     box-sizing: border-box;
@@ -196,11 +198,11 @@ input[type="file"]{
     cursor: pointer;
     font-weight: 700;
     font-size: 10pt;
-  }
+}
 
 .fileInput::-webkit-file-upload-button {
     visibility: hidden;
-    
+
 }
 
 /*
@@ -247,7 +249,7 @@ input[type="submit"] {
     text-transform: uppercase;
 }
 
-.invalid{
+.invalid {
     color: rgb(218, 47, 47);
     margin: 15px 0;
     font-size: 16px;
@@ -323,7 +325,7 @@ input[type="submit"] {
     color: #303030;
 }
 
-.popularitems_container h3{
+.popularitems_container h3 {
     margin-bottom: 1rem;
 }
 
@@ -418,7 +420,7 @@ input[type="submit"] {
 
 /***Category page***/
 
-.description-container{
+.description-container {
     width: 90%;
     background-color: #e2e2e2;
     box-sizing: border-box;
@@ -427,12 +429,12 @@ input[type="submit"] {
     border-radius: 10px;
 }
 
-.items-container{
+.items-container {
     display: flex;
     flex-direction: column;
 }
 
-.items-container>.item{
+.items-container>.item {
     display: flex;
     background-color: #FAFAFA;
     justify-content: space-around;
@@ -459,17 +461,18 @@ input[type="submit"] {
     margin: 10px auto 20px auto;
 }
 
-#item-description {
-    background-color: #FAFAFA;
-    padding: 10px;
-    border-radius: 10%;
+#item-image {
+    max-width: 90%;
+}
+
+.item-image-container {
+    text-align: center;
 }
 
 h1 {
     font-size: 32px;
 }
 
-/*ITEM PAGE END*/
 /*ITEM PAGE END*/
 
 /*ONBOARDING PAGE START - Ana */
