--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 :root {
     --green: #23B677;
+    --green-sub-nav: #29C381;
     --dark-grey: #303030;
     --yellow: #F7D025;
 }
@@ -77,7 +78,7 @@ h6 {
 .nav-more {
     position: fixed;
     bottom: -1000px;
-    background-color: var(--green);
+    background-color: var(--green-sub-nav);
     width: 100%;
     z-index: -1;
     padding-bottom: 50px;
@@ -257,7 +258,9 @@ input[type="submit"] {
 
 .searchbar_container {
     width: 100%;
-    margin-top: 3rem;
+    margin-top: 50px;
+    top: 0;
+    position: absolute;
 }
 
 .searchbar_container input {
@@ -272,6 +275,7 @@ input[type="submit"] {
     z-index: 4;
     font-size: 18px;
     position: relative;
+    outline: none;
 }
 
 .searchbar_container input::placeholder {
@@ -296,6 +300,23 @@ input[type="submit"] {
     border-bottom-right-radius: 12px;
 }
 
+.search_results{
+    width: 90%;
+    margin: 10px auto;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: rgb(230, 230, 230);
+    border-radius: 5px;
+}
+
+.search_results>i{
+    color:  var(--dark-grey);
+}
+
+
 /* Green thing at top of homepage */
 
 .homepage_top {
@@ -306,7 +327,7 @@ input[type="submit"] {
     top: 0;
     background-color: var(--green);
     position: absolute;
-    z-index: -1;
+    z-index: 2;
     min-height: 9rem;
     max-height: 1144px;
 }
@@ -317,6 +338,7 @@ input[type="submit"] {
     width: 90%;
     top: 4rem;
     margin: 0 5%;
+    padding-top: 100px;
     position: relative;
     font-family: 'Poppins Medium', sans-serif;
     font-size: 20px;
