--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,40 @@ input[type="file"]{
 
 .fileInput::-webkit-file-upload-button {
     visibility: hidden;
+}
 
+.info{
+    position: absolute;
+    width: 90%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #e7e7e7;
+    text-align: center;
+    padding: 10px 15px;
+    border-radius: 10px;
+    display: none;
+}
+
+.info>h4{
+    color: var(--green);
+}
+
+.info>p{
+    margin: 5px 0;
+}
+
+.go-home{
+    width: 60%;
+    margin: 20px auto 10px auto;
+    height: 50px;
+    background-color: var(--yellow);
+    border-radius: 10px;
+    color: #fff;
+    font-weight: 900;
+    font-size: 14px;
+    border: none;
+    text-transform: uppercase;
 }
 
 /*
