--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ html {
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
+
 }
 
 h1,
@@ -302,7 +303,7 @@ input[type="submit"] {
     border-bottom-right-radius: 12px;
 }
 
-.search_results{
+.search_results {
     width: 90%;
     margin: 10px auto;
     text-align: center;
@@ -314,8 +315,8 @@ input[type="submit"] {
     border-radius: 5px;
 }
 
-.search_results>i{
-    color:  var(--dark-grey);
+.search_results>i {
+    color: var(--dark-grey);
 }
 
 
@@ -495,7 +496,14 @@ h1 {
     font-size: 32px;
 }
 
+
 /*ITEM PAGE END*/
+
+/* SEARCH RESULTS */
+.search_results_container a {
+    display: block;
+    margin: 10px 24px;
+}
 
 /*ONBOARDING PAGE START - Ana */
 #onboarding {
