--- a/css/main.css
+++ b/css/main.css
@@ -344,12 +344,48 @@ input[type="submit"] {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: rgb(230, 230, 230);
+    background-color: #f3f3f3;
     border-radius: 5px;
 }
 
 .search_results>i {
     color: var(--dark-grey);
+}
+
+.no-results-info{
+    text-align: center;
+    font-size: 18px;
+    color: var(--dark-grey);
+}
+
+.search_no_results{
+    width: 90%;
+    margin: 10px auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    background-color: #f3f3f3;
+    border-radius: 5px;
+}
+
+.request-info{
+    margin-top: 10px;
+}
+
+.go-request{
+    width: 100%;
+    margin: 20px auto 10px auto;
+    height: 50px;
+    padding: 10px 15px;
+    background-color: var(--yellow);
+    border-radius: 10px;
+    color: #fff;
+    font-weight: 900;
+    font-size: 14px;
+    border: none;
+    text-transform: uppercase;
 }
 
 
