--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,6 @@ html {
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-
 }
 
 h1,
@@ -205,6 +204,40 @@ input[type="file"]{
 .fileInput::-webkit-file-upload-button {
     visibility: hidden;
 
+}
+
+.info{
+    position: absolute;
+    width: 90%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #e7e7e7;
+    text-align: center;
+    padding: 10px 15px;
+    border-radius: 10px;
+    display: none;
+}
+
+.info>h4{
+    color: var(--green);
+}
+
+.info>p{
+    margin: 5px 0;
+}
+
+.go-home{
+    width: 60%;
+    margin: 20px auto 10px auto;
+    height: 50px;
+    background-color: var(--yellow);
+    border-radius: 10px;
+    color: #fff;
+    font-weight: 900;
+    font-size: 14px;
+    border: none;
+    text-transform: uppercase;
 }
 
 /*
@@ -481,7 +514,7 @@ input[type="submit"] {
 
 .description-container {
     width: 90%;
-    background-color: #e2e2e2;
+    background-color: #f5f5f5;
     box-sizing: border-box;
     margin: 15px auto 15px auto;
     padding: 10px 15px;
@@ -505,14 +538,23 @@ input[type="submit"] {
 
 /*ITEM PAGE START*/
 #item-container {
-    width: 90vw;
     margin: 0 auto;
 }
 
-#item-container h2 {
-    text-align: center;
-    font-size: 20px;
-    margin: 10px auto;
+.white-head {
+    height: 100px;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    color: var(--dark-grey);
+    border-radius: 0 0 15px 15px;
+}
+
+.white-head>h2 {
+    text-align: left;
+    font-size: 24px;
+    font-weight: 800;
+    margin-left: 15px;
 }
 
 #item-category-image {
@@ -521,15 +563,18 @@ input[type="submit"] {
 }
 
 #item-image {
-    max-width: 90%;
+    width: 40%;
+    height: auto;
 }
 
 .item-image-container {
     text-align: center;
 }
 
-h1 {
-    font-size: 32px;
+#item-container> h3 {
+    font-size: 18px;
+    text-align: center;
+    margin: 15px auto;
 }
 
 
