--- a/css/main.css
+++ b/css/main.css
@@ -338,6 +338,7 @@ input[type="submit"] {
 
 .search_results {
     width: 90%;
+    position: relative;
     margin: 10px auto;
     text-align: center;
     display: flex;
@@ -346,6 +347,12 @@ input[type="submit"] {
     padding: 10px;
     background-color: #f3f3f3;
     border-radius: 5px;
+}
+
+.item-result{
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .search_results>i {
