--- a/css/main.css
+++ b/css/main.css
@@ -598,6 +598,10 @@ input[type="submit"] {
     text-align: center;
 }
 
+.item-pack{
+    margin-bottom: 25%;
+}
+
 /*ITEM PAGE END*/
 
 /* SEARCH RESULTS */
